[package]
name = "color_counter"
version = "0.1.0"
authors = ["Adilson Neto <almeidneto@gmail.com>"]
edition = "2018"
description = "A crate to inspect an image for most frequent colors."
license = "MIT"
repository = "https://github.com/aaneto/color_counter.rs"

[dependencies]
color_processing = "0.2.1"
image = "0.21.0"
clap = "2.32.0"