[package]
name = "color_counter"
version = "0.1.4"
authors = ["Adilson Neto <almeidneto@gmail.com>"]
edition = "2018"

readme = "README.md"

keywords = ["cli", "command", "color"]
categories = ["command-line-utilities"]

description = "A crate to inspect an image for most frequent colors."
repository = "https://github.com/aaneto/color_counter.rs"
license = "MIT"

[dependencies]
color_processing = "0.2.1"
image = "0.21.0"
clap = "2.32.0"